Clean up documentation

--- a/flask_shorten/static/homepage.html
+++ b/flask_shorten/static/homepage.html
@@ -42,7 +42,8 @@
     </div>
 
     <h2>Low Level Usage</h2>
-    Generating a random url.
+
+    Swagger/OpenAPI documentation can be found  <a href="/doc/swagger">here</a> Generating a random url.
     <pre><code>
         curl -X POST \
             http://link.jtmiclat.me/url/ \
